--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body{
     margin:0;
     color:#222;
@@ -31,4 +35,48 @@ nav ul li.right{
     margin-right: 2px;
     margin-top: 5px;
     margin-bottom:2px;
+}
+
+
+* {
+    box-sizing: border-box;
+}
+
+.bg {
+    display: flex;
+    height: 400px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.firstSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    background: rgba(0,0,0,0.5);
+    border-radius: 20px;
+    color: #fff;
+    max-width: 550px;
+    width: 100%;
+    margin: 0;                /* No vertical margin! */
+    overflow: hidden;
+}
+
+.leftSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#typewriter {
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #ffd700;
+    font-family: monospace;
+    margin-top: 10px;
+    white-space: nowrap;
+    max-width: 95%; 
 }
