--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ nav ul li.right{
     background: rgba(0,0,0,0.5);
     border-radius: 20px;
     color: #fff;
-    max-width: 550px;
+    max-width: 600px;
     width: 100%;
     margin: 30px 0;
 }
@@ -71,4 +71,5 @@ nav ul li.right{
     color: #ffd700;
     font-family: monospace;
     margin-top: 10px;
+    height:20px;
 }
