--- a/styles.css
+++ b/styles.css
@@ -146,13 +146,13 @@ nav ul li.right{
 .exp-header{
     display:flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     gap:8px;
 }
 
 .exp-header h3{
-    margin:0 auto;
+    margin:0;
     font-size: 1.1rem;
 }
 
@@ -174,4 +174,5 @@ nav ul li.right{
     color:#333;
     text-align: justify;
     font-size:0.95rem;
+    text-align: center;
 }
