--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,15 @@ nav ul li.right{
     flex:1 1 260px;
     max-width: 300px;
     text-align: center;
+    display:flex;
+    height:200px;
+}
+
+.project-content{
+    display:flex;
+    flex-direction: column;
+    height:100%;
+    justify-content: space-between;
 }
 
 .project-card h3{
@@ -268,4 +277,8 @@ nav ul li.right{
     margin:0;
     font-size: 0.95rem;
     color:#333;
+}
+
+.project-link:hover{
+    color:gray;
 }
