--- a/styles.css
+++ b/styles.css
@@ -307,13 +307,17 @@ nav ul li.right{
     border-radius: 12px;
     padding: 25px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.12);
+    display: flex;
+    align-items: center;
+    gap: 4px;
 }
 
 .skill-header {
+    flex: 0 0 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 15px;
+    margin-bottom: 0;
 }
 
 .skill-header span:first-child {
@@ -330,6 +334,7 @@ nav ul li.right{
 }
 
 .skill-bar {
+    flex:1;
     width: 100%;
     height: 24px;
     background: #e9ecef;
